# rust-tracer

./: Cargo.toml  rustfmt.toml
src/: camera.rs  colorvec3.rs  hitrecord.rs  hittable.rs  lib.rs  main.rs  matenum.rs  material.rs  ray.rs  shape.rs  utils.rs  vec3.rs
