[package]
name = "raytracer"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
edition = "2018"

[dependencies]
rand = '*'
clap = '*'
indicatif = '*'
rayon = '*'
itertools = '*'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = false
