[package]
name = "raytracer"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rand = "0.8"
indicatif = "0.15"
rayon = "1"
structopt = "0.3"
nalgebra = "0.24"
anyhow = "1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
overflow-checks = false
